banner-image spacing is fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,9 @@ nav{
     align-items: center;
     gap: 60px;
 }
+.banner-text{
+    width: 520px;
+}
 .banner-title{
     color: #fff;
     font-size: 4.875rem;
@@ -326,9 +329,21 @@ form > div {
     margin-right: 20px;
 }
 .activity-selection{
+    width: 100%;
     border: 0;
     color: rgba(255, 255, 255, 0.60);
     background: rgba(255, 255, 255, 0.10);  
+}
+option{
+    width: 100%;
+}
+
+select {
+    appearance: none;
+}
+
+select:focus{
+    background: #1A1A1A;
 }
 
 /* Meet Our Team Styles */
